fixed miss alignment between input and button

--- a/style.css
+++ b/style.css
@@ -21,7 +21,12 @@ body  {
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
+.col-md-12{
+    top:100px;  
+}
+.mb-2, .my-2{
+    margin-bottom:0!important;
+}
 h1 {
     color: white;
     font-size: 5em;
